--- a/index.mdx
+++ b/index.mdx
@@ -1,11 +1,12 @@
 ---
 title: "Introduction"
-description: "Welcome to the new home for your documentation"
+description: "Welcome to the RevRing AI documentation website"
+icon: 'house'
 ---
 
 ## Setting up
 
-Get your documentation site up and running in minutes.
+Get your first RevRing agent set up and running in minutes.
 
 <Card
   title="Start here"
@@ -13,85 +14,61 @@ Get your documentation site up and running in minutes.
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Follow our quickstart guide to handle your first AI phone call
 </Card>
 
-## Make it yours
+## Platform
 
-Design a docs site that looks great and empowers your users.
+Guides for telephony setup, inbound and outbound calling, tools, and webhooks.
 
 <Columns cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Telephony Setup"
+    icon="phone"
+    href="/platform/telephony"
   >
-    Edit your docs locally and preview them in real time.
+    Connect SIP trunks from Twilio, Telnyx, or any telephony provider.
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
+    title="Tools"
+    icon="gear"
+    href="/platform/tools"
   >
-    Customize the design and colors of your site to match your brand.
+    Define and configure tools for agents to use during calls.
   </Card>
     <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
+    title="Inbound Calling"
+    icon="arrow-left-to-line"
+    href="/platform/inbound"
   >
-    Organize your docs to help users find what they need and succeed with your product.
+    Handle inbound calls on any of your phone numbers.
   </Card>
   <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
+    title="Outbound Calling"
+    icon="arrow-right-to-line"
+    href="/platform/outbound"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Send outbound calls through our dashboard or API.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## API Reference
 
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
+View our full API reference and copy examples to build on top of the RevRing API.
 
 <Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
+  title="API Reference"
+  href="/api-reference"
+  icon="code"
 >
-  Browse our showcase of exceptional documentation sites.
+  View all available RevRing API endpoints and how to use them.
+</Card>
+
+## Need help?
+
+<Card
+  title="Get help from the RevRing AI team"
+  icon="life-ring"
+>
+  Contact us anytime through Slack or email!
 </Card>
